clusters/home/test/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.pavel-ussanli.online`)
      kind: Rule
      priority: 10
      services:
        - name: nginx
          port: 80
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: nginx
          port: 80
  tls:
    certResolver: cloudflare
